# yeelight-panel

./: .gitignore  pubspec.yaml
lib/: bridge_definitions.dart  bridge_definitions.freezed.dart  bridge_generated.dart  consts.dart  main.dart  root.dart
lib/actions/: action_base.dart  data_binders.dart  device_table_actions.dart
lib/common/: ct_color.dart  framed.dart  panel_button.dart  panel_control_button.dart  primary_button.dart
lib/data/: app_state.dart  app_state.freezed.dart  model_state.dart  model_state.freezed.dart
lib/layouts/: control_device_layout.dart  control_groups_layout.dart  devices_layout.dart  root_layout.dart  root_layout.g.dart
lib/menus/: control_menu.dart  control_menu.freezed.dart  control_menu.g.dart  main_menu.dart  main_menu.freezed.dart  menu_panel_builder.dart
lib/panels/: abstract_panel.dart  device_control_panel.dart  main_panel.dart
lib/widgets/: color_chip_list.dart  device_add_dialog.dart  (+2 more)
native/: Cargo.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs
native/src/actions/: mod.rs
native/src/base/: common.rs  device_build.rs  device_controller.rs  device_metadata.rs  device_result.rs  device_state.rs  mod.rs
native/src/base/data/: common.rs  device_group.rs  device_metadata.rs  device_result.rs  device_state.rs  mod.rs  profile.rs  transition.rs
native/src/base/meta/: common_macros.rs  device_macros.rs  mod.rs
native/src/device/: impl_interface.rs  mod.rs
native/src/devices_impl/: mod.rs  yeelight.rs
native/src/model_state/: database.rs  mod.rs
native/src/streams/: mod.rs
(+39 files in other folders)
