[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "^1.0"
flutter_rust_bridge = "^1.65.1"
sir = "^0.3"
env_logger = "^0.10"
tokio = "^1.25"
yeelight = "^0.4"
fmt = "^0.1"
derivative = "^2.2"
async-trait = "^0.1"
futures = "^0.3"
dyn-clone = "^1.0"
thiserror = "^1.0"
bimap = "^0.6"
ksni = "^0.2"
dbus = "^0.9"
pickledb = "^0.5"
serde = "^1.0"
strum = { version = "^0.24", features = ["derive"] }
lazy_static = "^1.4"
mdns = "^3.0"
rand = "^0.8"