[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "^1.0"
flutter_rust_bridge = "^1.71"
sir = "^0.3"
env_logger = "^0.10"
tokio = { version = "^1", features = ["io-std"] }
yeelight = { version = "^0.4", features = ["from-str", "discover"] }
fmt = "^0.1"
derivative = "^2.2"
async-trait = "^0.1"
futures = "^0.3"
dyn-clone = "^1.0"
thiserror = "^1.0"
bimap = "^0.6"
ksni = "^0.2"
dbus = "^0.9"
pickledb = "^0.5"
serde = "^1.0"
strum = { version = "^0.24", features = ["derive"] }
lazy_static = "^1.4"
mdns = "^3.0"
rand = "^0.8"
cpal = "^0.15"
arp-toolkit = { version = "^0.3", features = ["sync"] }
local-ip-address = "^0.5"
notify-rust = "^4"
dft = "^0.5"